--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -16,11 +16,11 @@ ext {
 
     //Third party libraries
     kotlin_coroutines_version = '1.0.1'
-    dagger_version = '2.11'
     javaxAnnotations_version = '1.0'
     javaxInject_version = '1'
     retrofit_version = '2.3.0'
     okhttp_logging_interceptor_version = '3.8.1'
+    koin_version = '2.0.1'
 
     //Unit Testing
     robolectric_version = '3.8'
@@ -34,6 +34,7 @@ ext {
 
     //Development
     leakCanaryVersion = '1.5'
+
 
     mainApplication = [
             kotlin                  : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
@@ -50,12 +51,11 @@ ext {
             archComponents          : "android.arch.lifecycle:extensions:$archComponents_version",
             archComponentsCompiler  : "android.arch.lifecycle:compiler:$archComponents_version",
             glide                   : "com.github.bumptech.glide:glide:$glide_version",
-            daggerCompiler          : "com.google.dagger:dagger-compiler:$dagger_version",
-            dagger                  : "com.google.dagger:dagger:$dagger_version",
             javaxAnnotation         : "javax.annotation:jsr250-api:$javaxAnnotations_version",
             javaxInject             : "javax.inject:javax.inject:$javaxInject_version",
             retrofit                : "com.squareup.retrofit2:converter-gson:$retrofit_version",
             okhttpLoggingInterceptor: "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_interceptor_version",
+            koin                    : "org.koin:koin-android-viewmodel:$koin_version"
     ]
 
     unitTesting = [
